--- a/Report.Rmd
+++ b/Report.Rmd
@@ -5,69 +5,95 @@ header-includes:
 output: word_document
 date: "2022-11-21"
 ---
+# Introduction  
+Response Variable: 
+
+* stroke:  
+
+  
+Possible Predictors: 
+
+* smoking_status: The smoking status of the observation. Factor variable with 3 levels: "formerly smoked", "never smoked", and "smokes".  
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-```{r, warning=FALSE}
+## Cleaning the data  
+To use this data set, we first converted variables to their correct representations and then omitted any incomplete observations.  
+
+### Notable fixes: 
+* The categorical variable smoking_status was reformatted to remove the level "Unknown", as it was used to represent unavailable data. Any cells that previously had "Unknown" were updated to reflect their unavailable status. 
+* The quantitative variable bmi was fixed by converting the data type from character to numeric. This change does not apply to non-numeric cells, so the cells containing "N/A" were changed to reflect their unavailable status in the now numeric column.  
+```{r, echo=FALSE, include=FALSE}
 library(readr)
 # Load in health Data
-health <- read_csv("C:/Users/Alyssa Guillory/Desktop/MATH 4322/GROUP PROJ/Project/ML-Group7/healthcare-dataset-stroke-data.csv", col_types = cols(gender = col_factor(levels = c("Male", "Female", "Other")), hypertension = col_factor(levels = c("0", "1")), heart_disease = col_factor(levels = c("0", "1")), ever_married = col_factor(levels = c("No", "Yes")), work_type = col_factor(levels = c("children", "Govt_job", "Never_worked", "Private", "Self-employed")), Residence_type = col_factor(levels = c("Rural", "Urban")), bmi = col_number(), smoking_status = col_factor(levels = c("formerly smoked", "never smoked", "smokes")), stroke = col_factor(levels = c("0", "1"))))
+data <- read_csv("C:/Users/Alyssa Guillory/Desktop/MATH 4322/GROUP PROJ/Project/ML-Group7/healthcare-dataset-stroke-data.csv", col_types = cols(gender = col_factor(levels = c("Male", "Female", "Other")), hypertension = col_factor(levels = c("0", "1")), heart_disease = col_factor(levels = c("0", "1")), ever_married = col_factor(levels = c("No", "Yes")), work_type = col_factor(levels = c("children", "Govt_job", "Never_worked", "Private", "Self-employed")), Residence_type = col_factor(levels = c("Rural", "Urban")), bmi = col_number(), smoking_status = col_factor(levels = c("formerly smoked", "never smoked", "smokes")), stroke = col_factor(levels = c("0", "1"))), na = c("Unknown", "N/A", ""))
 # Remove ID column
-health = health[,-1]
+health = data[,-1]
 # Omit NA values
-health2 = na.omit(health)
+health = na.omit(health)
 ```  
 
-```{R}
+---**still need to list the rest of the variables, short description of data, and the question we want to answer**
+
+# Logistic Regression Model  
+
+We chose to use a logistic regression model for our data because our response variable is qualitative with two classes. It was desirable to have a model predict the probability of a person having a stroke using binary classification. If linear regression is used to predict the probability of whether or not a person will have a stroke, then the model may have predicted Y values outside of our intended range of 0-1. The logistic regression model allows us to enforce this restriction of range.  
+
+## Model Formula   
+
+
+```{r, eval=FALSE, include=FALSE}
 #create model with all predictors
 set.seed(500)
-fit.health = glm(stroke ~ ., family = "binomial", data=health2)
-summary(fit.health)
+health.glm = glm(stroke ~ ., family = "binomial", data=health)
+summary(health.glm)
 
 #create model with significant predictors found from doing stepwise backward method on original model
-step(fit.health, direction = "backward")
-better.health = glm(formula = stroke ~ age + hypertension + heart_disease + avg_glucose_level, 
-    family = "binomial", data = health2)
+step(health.glm, direction = "backward")
+health2.glm = glm(formula = stroke ~ age + hypertension + heart_disease + avg_glucose_level, 
+    family = "binomial", data = health)
 
 #create a model w/out heart_disease
-best.health = glm(formula = stroke ~ age + hypertension + avg_glucose_level, family = "binomial", data = health2)
+health3.glm = glm(formula = stroke ~ age + hypertension + avg_glucose_level, family = "binomial", data = health)
 
-```
-```{r}
+```  
+
+```{r, eval=FALSE, include=FALSE}
 #comparing models
 #reminder: table w/null dev, residual dev, r^2, AIC for each model
 
-#fit.health info
-summary(fit.health)
-fit.bic=BIC(fit.health)
-fit.stat = cbind(fit.health$null.deviance,fit.health$deviance,(1-(fit.health$deviance/fit.health$null.deviance)),fit.health$aic,fit.bic)
+#health.glm info
+summary(health.glm)
+fit.bic=BIC(health.glm)
+fit.stat = cbind(health.glm$null.deviance,health.glm$deviance,(1-(health.glm$deviance/health.glm$null.deviance)),health.glm$aic,fit.bic)
 colnames(fit.stat) = c("Null Deviance","Residual Deviance","R^2","AIC","BIC")
 #print(fit.stat)
 #R^2: 1-(1141.8/1411) =0.1907867
 
-#better.health info
-summary(better.health)
-better.bic=BIC(better.health)
-better.stat = cbind(better.health$null.deviance,better.health$deviance,(1-(better.health$deviance/better.health$null.deviance)),better.health$aic,better.bic)
+#health2.glm info
+summary(health2.glm)
+better.bic=BIC(health2.glm)
+better.stat = cbind(health2.glm$null.deviance,health2.glm$deviance,(1-(health2.glm$deviance/health2.glm$null.deviance)),health2.glm$aic,better.bic)
 colnames(better.stat) = c("Null Deviance","Residual Deviance","R^2","AIC","BIC")
 #print(better.stat)
 #R^2: 1-(1149/1411) =0.1856839
 
-#best.health info
-summary(best.health)
-best.bic=BIC(best.health)
-best.stat = cbind(best.health$null.deviance,best.health$deviance,(1-(best.health$deviance/best.health$null.deviance)),best.health$aic, best.bic)
+#health3.glm info
+summary(health3.glm)
+best.bic=BIC(health3.glm)
+best.stat = cbind(health3.glm$null.deviance,health3.glm$deviance,(1-(health3.glm$deviance/health3.glm$null.deviance)),health3.glm$aic, best.bic)
 colnames(fit.stat) = c("Null Deviance","Residual Deviance","R^2","AIC","BIC")
 #print(best.stat)
 #R^2: 1-(1154.1/1411) = 0.1820695
 
 goodness.fit=rbind(fit.stat,better.stat,best.stat)
-rownames(goodness.fit) = c("fit.health","better.health","best.health")
+rownames(goodness.fit) = c("health.glm","health2.glm","health3.glm")
 print(goodness.fit)
 
-#some info for explaining why we're picking the predictors from better.health:
-#lower residual dev, higher R^2, and lower AIC for better.health shows that including the heart_disease predictor helps to create a better model
+#some info for explaining why we're picking the predictors from health2.glm:
+#lower residual dev, higher R^2, and lower AIC for health2.glm shows that including the heart_disease predictor helps to create a better model
 
 
 #logistic reg. coefficients for equation:
@@ -77,19 +103,19 @@ print(goodness.fit)
 #hypertension1:0.568379
 #heart_disease1:0.453704
 #avg_glucose_level: 0.004701
-```
+```  
 
-```{r}
+```{r, eval=FALSE, include=FALSE}
 ##training & testing
 test.error = 0
 train.error=0
 for (i in 1:10) {
   set.seed(i)
   #Select 80% of the data
-  sample = sample.int(n = nrow(health2),size = round(.80*nrow(health2)), replace = FALSE)
+  sample = sample.int(n = nrow(health),size = round(.80*nrow(health)), replace = FALSE)
   
-  train = health2[sample,]
-  test = health2[-sample,]
+  train = health[sample,]
+  test = health[-sample,]
   #create model on training data
   health.train = glm(formula = stroke ~ age + hypertension + heart_disease + avg_glucose_level, family = "binomial", data = train)
   #summary(health.train)
@@ -105,7 +131,7 @@ for (i in 1:10) {
   } else {
     train.error[i] = (conf.mat.train[1,2]+conf.mat.train[2,1])/sum(conf.mat.train)
   }
-    
+  
   #predicting based on the model fit with the testing data
   predict.health = predict(health.train, type = "response", newdata = test)
   predict.stroke = ifelse(predict.health< 0.5,"0","1")
@@ -114,8 +140,12 @@ for (i in 1:10) {
   rows = nrow(conf.test)
   if(rows < 2) {
     test.error[i] = (conf.test[1,2]/sum(conf.test))
+    test.sensitivity = 0/conf.test[1,2]
+    test.specificity = conf.test[1,1]/conf.test[1,1]
   } else {
     test.error[i] = (conf.test[1,2]+conf.test[2,1])/sum(conf.test)
+    test.sensitivity = conf.test[2,2]/conf.test[1,2]+conf.test[2,2]
+    test.specificity = conf.test[1,1]/conf.test[1,1]+conf.test[2,1]
   }
 }
 #Train error rate for each sample:
@@ -129,24 +159,18 @@ test.error
 #mean of the test error
 test.error.mean = mean(test.error)
 test.error.mean
-```
+#Test Sensitivity
+test.sensitivity
+#Test Specificity
+test.specificity
+#Training data - observations used to train or teach the method how to estimate f.
+#Test data - observations used to determine the accuracy of estimating f.
+```  
 
+explain model choice  
+write model equation  
+test/train models  
+test error rate  
+interpretation of full model in regards to our question: which factors demonstrate statistical significance in relation to having a stroke?  
 
-
-
-
-
-If the linear regression is used to predict a binary response, the
-resulting model may not restrict the predicted Y values within 0
-and 1.
-
-describe logistic reg choice
-We chose to use a logistic regression model for our data because our response variable is qualitative with two classes. It was desirable to have a model predict the probability of a person having a stroke using binary classification. If linear regression is used to predict the probability of whether or not a person will have a stroke, then the model may have predicted Y values outside of our intended range of 0-1. The logistic regression model allows us to enforce this restriction of range.
-
-restrict the predicted y values between the set range of 0 and 1.
-
-explain model choice
-write model equation
-test/train models
-test error rate
-interpretation of full model in regards to our question: which factors demonstrate statistical significance in relation to having a stroke?
+# Conclusion
