--- a/Report.Rmd
+++ b/Report.Rmd
@@ -48,7 +48,7 @@ Our basic logistic regression formula with all our predictors would be as follow
 knitr::include_graphics("logreg.png")
 ```  
 
-```{r, include=FALSE}
+```{r, eval=FALSE, include=FALSE}
 library(ggplot2)
 library(GGally)
 ggpairs(health[,c(2:4,8,11)])
@@ -56,16 +56,10 @@ ggpairs(health[,c(2:4,8,11)])
 
 This is what our logistic regression formula would look like if we considered all of our predictors and the response variable being stroke. However, we automatically did not consider the unique identifier (id) as this variable is only used to identify patients, which does not have a significant influence on predicting the probability of strokes. Using the glm() function, we created our initial logistic model with stroke being the response and all the other variables as predictors (except id).
 
-```{r, include=FALSE}
+```{r,include=FALSE}
 #create model with all predictors
 set.seed(500)
 health.glm = glm(stroke ~ ., family = "binomial", data=health)
-summary(health.glm)
-```  
-
-As the summary shows, the predictors age, hypertension, and avg_glucose_level show high levels of significance, and the predictor heart_disease show moderate levels of significance. Since our p-values for all four predictors are less than 0.1, we can confidently reject the null hypothesis that states H0: B0 = B1= …= Bn. To confirm that these variables are significant, we used the backwards step() function to see if it would give us the same significant variables, and it did.
-```{r, include=FALSE}
-
 #create model with significant predictors found from doing stepwise backward method on original model
 health2.glm = step(health.glm, direction = "backward")
 #health2.glm = glm(formula = stroke ~ age + hypertension + heart_disease + avg_glucose_level, 
@@ -73,11 +67,21 @@ health2.glm = step(health.glm, direction = "backward")
 
 #create a model w/out heart_disease
 health3.glm = glm(formula = stroke ~ age + hypertension + avg_glucose_level, family = "binomial", data = health)
-
 ```  
-By removing the predictors that had little to no significance in predicting the response variable, we are able to refit our data into a second model (better.fit) with the four predictors that are significant. The original model with all predictors had an AIC of 1173.8, while the second model with the four significant predictors had an AIC of 1159.9. As there was not much of a difference between the first and second model, we decided to remove the lowest significant predictor (heart_disease1) out of the four to perform one last model refitting of our data. This time, our AIC for the third model (best.health) came out to be 1162.1, which was a slight increase compared to the second model.
+```{r}
+summary(health.glm)
+```  
 
-```{r, echo=FALSE}
+As the summary shows, the predictors age, hypertension, and avg_glucose_level show high levels of significance, and the predictor heart_disease show moderate levels of significance. Since our p-values for all four predictors are less than 0.1, we can confidently reject the null hypothesis that states H0: B0 = B1= …= Bn. To confirm that these variables are significant, we used the backwards step() function to see if it would give us the same significant variables, and it did.
+```{r,echo=TRUE}
+#Model created from backwards step()
+summary(health2.glm)
+#Model created without heart_disease
+summary(health3.glm)
+```  
+By removing the predictors that had little to no significance in predicting the response variable, we are able to refit our data into a second model (health2.glm) with the four predictors that are significant. The original model with all predictors had an AIC of 1173.8, while the second model with the four significant predictors had an AIC of 1159.9. As there was not much of a difference between the first and second model, we decided to remove the lowest significant predictor (heart_disease) out of the four to perform one last model refitting of our data. This time, our AIC for the third model (health3.glm) came out to be 1162.1, which was a slight increase compared to the second model.
+
+```{r, include=FALSE}
 #comparing models
 #reminder: table w/null dev, residual dev, r^2, AIC for each model
 
@@ -91,24 +95,22 @@ colnames(fit.stat) = c("Null Deviance","Residual Deviance","R^2","AIC","BIC")
 
 #health2.glm info
 summary(health2.glm)
-better.bic=BIC(health2.glm)
-better.stat = cbind(health2.glm$null.deviance,health2.glm$deviance,(1-(health2.glm$deviance/health2.glm$null.deviance)),health2.glm$aic,better.bic)
-colnames(better.stat) = c("Null Deviance","Residual Deviance","R^2","AIC","BIC")
-#print(better.stat)
+health2.bic=BIC(health2.glm)
+health2.stat = cbind(health2.glm$null.deviance,health2.glm$deviance,(1-(health2.glm$deviance/health2.glm$null.deviance)),health2.glm$aic,health2.bic)
+colnames(health2.stat) = c("Null Deviance","Residual Deviance","R^2","AIC","BIC")
+#print(health2.stat)
 #R^2: 1-(1149/1411) =0.1856839
 
 #health3.glm info
 summary(health3.glm)
-best.bic=BIC(health3.glm)
-best.stat = cbind(health3.glm$null.deviance,health3.glm$deviance,(1-(health3.glm$deviance/health3.glm$null.deviance)),health3.glm$aic, best.bic)
+health3.bic=BIC(health3.glm)
+health3.stat = cbind(health3.glm$null.deviance,health3.glm$deviance,(1-(health3.glm$deviance/health3.glm$null.deviance)),health3.glm$aic, health3.bic)
 colnames(fit.stat) = c("Null Deviance","Residual Deviance","R^2","AIC","BIC")
-#print(best.stat)
+#print(health3.stat)
 #R^2: 1-(1154.1/1411) = 0.1820695
 
-goodness.fit=rbind(fit.stat,better.stat,best.stat)
+goodness.fit=rbind(fit.stat,health2.stat,health3.stat)
 rownames(goodness.fit) = c("health.glm","health2.glm","health3.glm")
-print(goodness.fit)
-
 #some info for explaining why we're picking the predictors from health2.glm:
 #lower residual dev, higher R^2, and lower AIC for health2.glm shows that including the heart_disease predictor helps to create a better model
 
@@ -121,8 +123,14 @@ print(goodness.fit)
 #heart_disease1:0.453704
 #avg_glucose_level: 0.004701
 ```  
+Additional information was obtained by using the Goodness of Fit statistical hypothesis test. Given the three models we tested above, we are able to determine each models’ null deviance, residual deviance, R^2 value, AIC value, and BIC value. The lower the residual deviance, AIC, and BIC values, the better the model is able to predict the value of the response variable. As for R^2, a value closest to 1 is best.  
 
 ```{r}
+print(goodness.fit)
+```  
+Between all three models, better.health and best.health provided the closest fit for our data, with better.health having a slight advantage in lower residual deviance and AIC values. The test results show that each model's R^2 value is extremely low, with values being between 0.1 and 0.2, informing us that only 10%-20% of the variance can be explained by our models. This means that using logistics regression to fit our data may not result in the best fitting model. Even so, we can conclude that the model better.health (with predictors age, hypertension1, heart_disease1, and avg_glucose_level) had the best fit compared to the other models and is somewhat accurate in predicting whether or not a stroke will occur.
+
+```{r, include=FALSE}
 ##training & testing
 test.error = 0
 train.error = 0
@@ -174,7 +182,7 @@ for (i in 1:10) {
 }
 ```  
 
-```{r}
+```{r, echo=TRUE}
 #Mean of the train error rate
 (train.error.mean = mean(train.error))
 #Mean of the test error
