--- a/Report.Rmd
+++ b/Report.Rmd
@@ -128,7 +128,8 @@ Additional information was obtained by using the Goodness of Fit statistical hyp
 ```{r}
 print(goodness.fit)
 ```  
-Between all three models, better.health and best.health provided the closest fit for our data, with better.health having a slight advantage in lower residual deviance and AIC values. The test results show that each model's R^2 value is extremely low, with values being between 0.1 and 0.2, informing us that only 10%-20% of the variance can be explained by our models. This means that using logistics regression to fit our data may not result in the best fitting model. Even so, we can conclude that the model better.health (with predictors age, hypertension1, heart_disease1, and avg_glucose_level) had the best fit compared to the other models and is somewhat accurate in predicting whether or not a stroke will occur.
+Between all three models, better.health and best.health provided the closest fit for our data, with better.health having a slight advantage in lower residual deviance and AIC values. The test results show that each model's R^2 value is extremely low, with values being between 0.1 and 0.2, informing us that only 10%-20% of the variance can be explained by our models. This means that using logistic regression to fit our data may not result in the best fitting model. Even so, we can conclude that the model better.health (with predictors age, hypertension1, heart_disease1, and avg_glucose_level) had the best fit compared to the other models and is somewhat accurate in predicting whether or not a stroke will occur.
+\newpage
 
 ```{r, include=FALSE}
 ##training & testing
@@ -147,7 +148,7 @@ for (i in 1:10) {
   health.train = glm(formula = stroke ~ age + hypertension + heart_disease + avg_glucose_level, family = "binomial", data = train)
   #summary(health.train)
   
-  #predicting based on the model fit with the training data
+  #predicting based on the model health with the training data
   prediction.train = predict(health.train, type="response")
   predict.stroke.train = ifelse(prediction.train < 0.5,"0","1")
   (conf.mat.train = table(predict.stroke.train,train$stroke))
@@ -191,17 +192,9 @@ for (i in 1:10) {
 test.sensitivity
 (test.sensitivity.mean = mean(test.sensitivity))
 #Test Specificity
-test.specificity
 (test.specificity.mean = mean(test.specificity))
-#Training data - observations used to train or teach the method how to estimate f.
-#Test data - observations used to determine the accuracy of estimating f.
 ```  
 
 
-explain model choice  
-write model equation  
-test/train models  
-test error rate  
-interpretation of full model in regards to our question: which factors demonstrate statistical significance in relation to having a stroke?  
 
 # Conclusion
