--- a/Report.Rmd
+++ b/Report.Rmd
@@ -1,58 +1,66 @@
 ---
-title: "Report"
-header-includes:
- \usepackage{readr}
-output: word_document
+title: "Stroke Analysis Report"
+author: "Christine Do, Alyssa Guillory, Johnny Le, Giselle Ruiz, Christopher Turcios, Jimmy Vuong"
 date: "2022-11-21"
+output:
+  pdf_document: default
+  word_document: default
 ---
-# Introduction  
-Response Variable: 
 
-* stroke:  
+# Introduction
 
-  
-Possible Predictors: 
+Response Variable:
 
-* smoking_status: The smoking status of the observation. Factor variable with 3 levels: "formerly smoked", "never smoked", and "smokes".  
+-   stroke:
 
+Possible Predictors:
+
+-   smoking_status: The smoking status of the observation. Factor variable with 3 levels: "formerly smoked", "never smoked", and "smokes".
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE)
 ```
-## Cleaning the data  
-To use this data set, we first converted variables to their correct representations and then omitted any incomplete observations.  
 
-### Notable fixes: 
-* The categorical variable smoking_status was reformatted to remove the level "Unknown", as it was used to represent unavailable data. Any cells that previously had "Unknown" were updated to reflect their unavailable status. 
-* The quantitative variable bmi was fixed by converting the data type from character to numeric. This change does not apply to non-numeric cells, so the cells containing "N/A" were changed to reflect their unavailable status in the now numeric column.  
+## Cleaning the data
+
+To use this data set, we first converted variables to their correct representations and then omitted any incomplete observations.
+
+### Notable fixes:
+
+-   The categorical variable smoking_status was reformatted to remove the level "Unknown", as it was used to represent unavailable data. Any cells that previously had "Unknown" were updated to reflect their unavailable status.
+-   The quantitative variable bmi was fixed by converting the data type from character to numeric. This change does not apply to non-numeric cells, so the cells containing "N/A" were changed to reflect their unavailable status in the now numeric column.\
+
 ```{r, include=FALSE}
 library(readr)
 # Load in health Data
-data <- read_csv("C:/Users/Alyssa Guillory/Desktop/MATH 4322/GROUP PROJ/Project/ML-Group7/healthcare-dataset-stroke-data.csv", col_types = cols(gender = col_factor(levels = c("Male", "Female", "Other")), hypertension = col_factor(levels = c("0", "1")), heart_disease = col_factor(levels = c("0", "1")), ever_married = col_factor(levels = c("No", "Yes")), work_type = col_factor(levels = c("children", "Govt_job", "Never_worked", "Private", "Self-employed")), Residence_type = col_factor(levels = c("Rural", "Urban")), bmi = col_number(), smoking_status = col_factor(levels = c("formerly smoked", "never smoked", "smokes")), stroke = col_factor(levels = c("0", "1"))), na = c("Unknown", "N/A", ""))
+data <- read_csv("healthcare-dataset-stroke-data.csv", col_types = cols(gender = col_factor(levels = c("Male", "Female", "Other")), hypertension = col_factor(levels = c("0", "1")), heart_disease = col_factor(levels = c("0", "1")), ever_married = col_factor(levels = c("No", "Yes")), work_type = col_factor(levels = c("children", "Govt_job", "Never_worked", "Private", "Self-employed")), Residence_type = col_factor(levels = c("Rural", "Urban")), bmi = col_number(), smoking_status = col_factor(levels = c("formerly smoked", "never smoked", "smokes")), stroke = col_factor(levels = c("0", "1"))), na = c("Unknown", "N/A", ""))
 # Remove ID column
 health = data[,-1]
 # Omit NA values
 health = na.omit(health)
-```  
+```
 
 ---**still need to list the rest of the variables, short description of data, and the question we want to answer**
 
-# Logistic Regression Model  
+\newpage
 
-We chose to use a logistic regression model for our data because our response variable is qualitative with two classes. It was desirable to have a model predict the probability of a person having a stroke using binary classification. If linear regression is used to predict the probability of whether or not a person will have a stroke, then the model may have predicted Y values outside of our intended range of 0-1. The logistic regression model allows us to enforce this restriction of range.  
+# Logistic Regression Model
 
-## Model Formula   
-Our basic logistic regression formula with all our predictors would be as follows:  
+We chose to use a logistic regression model for our data because our response variable is qualitative with two classes. It was desirable to have a model predict the probability of a person having a stroke using binary classification. If linear regression is used to predict the probability of whether or not a person will have a stroke, then the model may have predicted Y values outside of our intended range of 0-1. The logistic regression model allows us to enforce this restriction of range.
+
+## Model Formula
+
+Our basic logistic regression formula with all our predictors would be as follows:
 
 ```{r log reg model formula, out.width = '100%'}
 knitr::include_graphics("logreg.png")
-```  
+```
 
 ```{r, eval=FALSE, include=FALSE}
 library(ggplot2)
 library(GGally)
 ggpairs(health[,c(2:4,8,11)])
-```  
+```
 
 This is what our logistic regression formula would look like if we considered all of our predictors and the response variable being stroke. However, we automatically did not consider the unique identifier (id) as this variable is only used to identify patients, which does not have a significant influence on predicting the probability of strokes. Using the glm() function, we created our initial logistic model with stroke being the response and all the other variables as predictors (except id).
 
@@ -67,19 +75,26 @@ health2.glm = step(health.glm, direction = "backward")
 
 #create a model w/out heart_disease
 health3.glm = glm(formula = stroke ~ age + hypertension + avg_glucose_level, family = "binomial", data = health)
-```  
+```
+
 ```{r}
 summary(health.glm)
-```  
+```
 
-As the summary shows, the predictors age, hypertension, and avg_glucose_level show high levels of significance, and the predictor heart_disease show moderate levels of significance. Since our p-values for all four predictors are less than 0.1, we can confidently reject the null hypothesis that states H0: B0 = B1= …= Bn. To confirm that these variables are significant, we used the backwards step() function to see if it would give us the same significant variables, and it did.
+As the summary shows, the predictors age, hypertension, and avg_glucose_level show high levels of significance, and the predictor heart_disease show moderate levels of significance. Since our p-values for all four predictors are less than 0.1, we can confidently reject the null hypothesis that states $H_0$: $B_0$ = $B_1$= ... = $B_n$. To confirm that these variables are significant, we used the backwards step() function to see if it would give us the same significant variables, and it did.
+
 ```{r,echo=TRUE}
 #Model created from backwards step()
 summary(health2.glm)
 #Model created without heart_disease
 summary(health3.glm)
-```  
+```
+
 By removing the predictors that had little to no significance in predicting the response variable, we are able to refit our data into a second model (health2.glm) with the four predictors that are significant. The original model with all predictors had an AIC of 1173.8, while the second model with the four significant predictors had an AIC of 1159.9. As there was not much of a difference between the first and second model, we decided to remove the lowest significant predictor (heart_disease) out of the four to perform one last model refitting of our data. This time, our AIC for the third model (health3.glm) came out to be 1162.1, which was a slight increase compared to the second model.
+
+$$
+P(stroke = 1) = \frac{exp(b_0 + b_3*age + b_4*hypertension + b_9*avg\_glucose\_level)}{1 + exp(b_0 + b_3*age + b_4*hypertension + b_9*avg\_glucose\_level)}
+$$
 
 ```{r, include=FALSE}
 #comparing models
@@ -122,14 +137,15 @@ rownames(goodness.fit) = c("health.glm","health2.glm","health3.glm")
 #hypertension1:0.568379
 #heart_disease1:0.453704
 #avg_glucose_level: 0.004701
-```  
-Additional information was obtained by using the Goodness of Fit statistical hypothesis test. Given the three models we tested above, we are able to determine each models’ null deviance, residual deviance, R^2 value, AIC value, and BIC value. The lower the residual deviance, AIC, and BIC values, the better the model is able to predict the value of the response variable. As for R^2, a value closest to 1 is best.  
+```
+
+Additional information was obtained by using the Goodness of Fit statistical hypothesis test. Given the three models we tested above, we are able to determine each models' null deviance, residual deviance, R\^2 value, AIC value, and BIC value. The lower the residual deviance, AIC, and BIC values, the better the model is able to predict the value of the response variable. As for R\^2, a value closest to 1 is best.
 
 ```{r}
 print(goodness.fit)
-```  
-Between all three models, better.health and best.health provided the closest fit for our data, with better.health having a slight advantage in lower residual deviance and AIC values. The test results show that each model's R^2 value is extremely low, with values being between 0.1 and 0.2, informing us that only 10%-20% of the variance can be explained by our models. This means that using logistic regression to fit our data may not result in the best fitting model. Even so, we can conclude that the model better.health (with predictors age, hypertension1, heart_disease1, and avg_glucose_level) had the best fit compared to the other models and is somewhat accurate in predicting whether or not a stroke will occur.
-\newpage
+```
+
+Between all three models, better.health and best.health provided the closest fit for our data, with better.health having a slight advantage in lower residual deviance and AIC values. The test results show that each model's R\^2 value is extremely low, with values being between 0.1 and 0.2, informing us that only 10%-20% of the variance can be explained by our models. This means that using logistic regression to fit our data may not result in the best fitting model. Even so, we can conclude that the model better.health (with predictors age, hypertension1, heart_disease1, and avg_glucose_level) had the best fit compared to the other models and is somewhat accurate in predicting whether or not a stroke will occur. \newpage
 
 ```{r, include=FALSE}
 ##training & testing
@@ -181,7 +197,7 @@ for (i in 1:10) {
     test.specificity[i] = conf.test[1,1]/(conf.test[1,1]+conf.test[2,1])
   }
 }
-```  
+```
 
 ```{r, echo=TRUE}
 #Mean of the train error rate
@@ -193,8 +209,264 @@ test.sensitivity
 (test.sensitivity.mean = mean(test.sensitivity))
 #Test Specificity
 (test.specificity.mean = mean(test.specificity))
-```  
+```
+
+\newpage
+
+# Decision Tree Model
+
+```{r, message=FALSE, include=FALSE}
+install.packages("tree", repos = "http://cran.us.r-project.org")
+install.packages("randomForest", repos = "http://cran.us.r-project.org")
+library(tree)
+library(randomForest)
+
+# Load in health Data
+health <- read_csv("healthcare-dataset-stroke-data.csv",
+  col_types = cols(
+    gender = col_factor(levels = c("Male", "Female", "Other")),
+    hypertension = col_factor(levels = c("0", "1")),
+    heart_disease = col_factor(levels = c("0", "1")),
+    ever_married = col_factor(levels = c("No", "Yes")),
+    work_type = col_factor(
+      levels =
+        c("children", "Govt_job", "Never_worked", "Private", "Self-employed")
+    ),
+    Residence_type = col_factor(levels = c("Rural", "Urban")),
+    bmi = col_number(),
+    smoking_status = col_factor(
+      levels =
+        c("formerly smoked", "never smoked", "smokes")
+    ),
+    stroke = col_factor(levels = c("0", "1"))
+  )
+)
+# Remove ID column
+health <- health[, -1]
+# Omit NA values
+health <- na.omit(health)
+# View(health)
+```
+
+## Base Decision Tree
+
+```{r}
+# Test random forest model 10 times
+test.error = 0
+train.error = 0
+test.sensitivity = 0
+test.specificity = 0
+
+for (i in 1:10) {
+  set.seed(i)
+
+  train <- sample(1:nrow(health), nrow(health) / 2 + 0.5)
+  health.train <- health[train, ]
+
+  # Create testing data
+  health.test <- health[-train, ]
 
 
+  # Create Decision Tree
+  health.tree <- tree(stroke ~ ., data = health.train)
+
+  # Predict using testing Data
+  health.pred <- predict(health.tree, health.test, type = "class")
+  (conf.test = table(health.pred, health.test$stroke))
+  
+  rows = nrow(conf.test)
+  if(rows < 2) {
+    test.error[i] = (conf.test[1,2]/sum(conf.test))
+    test.sensitivity[i] = 0
+    test.specificity[i] = conf.test[1,1]/conf.test[1,1]
+  } else if(ncol(conf.test)<1) {
+    test.error[i] = (conf.test[1,2]+conf.test[2,1])/sum(conf.test)
+    test.sensitivity[i] = 0
+    test.specificity[i] = conf.test[1,1]/(conf.test[1,1]+conf.test[2,1])
+  }
+  else {
+    test.error[i] = (conf.test[1,2]+conf.test[2,1])/sum(conf.test)
+    test.sensitivity[i] = conf.test[2,2]/(conf.test[1,2]+conf.test[2,2])
+    test.specificity[i] = conf.test[1,1]/(conf.test[1,1]+conf.test[2,1])
+  }
+}
+
+cat("Test Error: ", mean(test.error))
+cat("Test Sensitivity: ", mean(test.sensitivity))
+cat("Test Specificity: ", mean(test.specificity))
+
+plot(health.tree)
+text(health.tree, pretty = 0)
+```
+
+## Pruned Decision Tree
+
+```{r}
+# Test random forest model 10 times
+test.error = 0
+train.error = 0
+test.sensitivity = 0
+test.specificity = 0
+
+for (i in 1:10) {
+  set.seed(i)
+
+  train <- sample(1:nrow(health), nrow(health) / 2 + 0.5)
+  health.train <- health[train, ]
+
+  # Create testing data
+  health.test <- health[-train, ]
+
+
+  # Prune Decision Tree
+  cv.health <- cv.tree(health.tree, FUN = prune.misclass)
+
+  # Predict using Pruned Tree
+  health.pruned <- prune.misclass(health.tree, best = 5)
+  health.pred.pruned <- predict(health.pruned, health.test, type = "class")
+  (conf.test = table(health.pred.pruned, health.test$stroke))
+  
+  rows = nrow(conf.test)
+  if(rows < 2) {
+    test.error[i] = (conf.test[1,2]/sum(conf.test))
+    test.sensitivity[i] = 0
+    test.specificity[i] = conf.test[1,1]/conf.test[1,1]
+  } else if(ncol(conf.test)<1) {
+    test.error[i] = (conf.test[1,2]+conf.test[2,1])/sum(conf.test)
+    test.sensitivity[i] = 0
+    test.specificity[i] = conf.test[1,1]/(conf.test[1,1]+conf.test[2,1])
+  }
+  else {
+    test.error[i] = (conf.test[1,2]+conf.test[2,1])/sum(conf.test)
+    test.sensitivity[i] = conf.test[2,2]/(conf.test[1,2]+conf.test[2,2])
+    test.specificity[i] = conf.test[1,1]/(conf.test[1,1]+conf.test[2,1])
+  }
+}
+
+cat("Test Error: ", mean(test.error))
+cat("Test Sensitivity: ", mean(test.sensitivity))
+cat("Test Specificity: ", mean(test.specificity))
+
+plot(cv.health$size, cv.health$dev, type = "b")
+```
+
+## Bagged Decision Tree
+
+```{r}
+# Test random forest model 10 times
+test.error = 0
+train.error = 0
+test.sensitivity = 0
+test.specificity = 0
+
+for (i in 1:10) {
+  set.seed(i)
+
+  train <- sample(1:nrow(health), nrow(health) / 2 + 0.5)
+  health.train <- health[train, ]
+
+  # Create testing data
+  health.test <- health[-train, ]
+
+
+  # Bagged Model
+  p <- ncol(health)
+  n <- nrow(health)
+  B <- 1000
+  health.bag <- randomForest(stroke ~ ., data = health.train, mtry = p, ntree = B, importance = TRUE)
+
+  # Predict using Bagged Model
+  health.pred.bag <- predict(health.bag, health.test, type = "class")
+  (conf.test = table(health.pred.bag, health.test$stroke))
+  
+  rows = nrow(conf.test)
+  if(rows < 2) {
+    test.error[i] = (conf.test[1,2]/sum(conf.test))
+    test.sensitivity[i] = 0
+    test.specificity[i] = conf.test[1,1]/conf.test[1,1]
+  } else if(ncol(conf.test)<1) {
+    test.error[i] = (conf.test[1,2]+conf.test[2,1])/sum(conf.test)
+    test.sensitivity[i] = 0
+    test.specificity[i] = conf.test[1,1]/(conf.test[1,1]+conf.test[2,1])
+  }
+  else {
+    test.error[i] = (conf.test[1,2]+conf.test[2,1])/sum(conf.test)
+    test.sensitivity[i] = conf.test[2,2]/(conf.test[1,2]+conf.test[2,2])
+    test.specificity[i] = conf.test[1,1]/(conf.test[1,1]+conf.test[2,1])
+  }
+}
+
+cat("Test Error: ", mean(test.error))
+cat("Test Sensitivity: ", mean(test.sensitivity))
+cat("Test Specificity: ", mean(test.specificity))
+
+varImpPlot(health.bag)
+health.tree.bag <- tree(stroke ~ ., data = health.train, subset = health.bag$inbag)
+plot(health.tree.bag)
+text(health.tree.bag, pretty = 0)
+```
+
+## Random Forest
+
+```{r}
+# Test random forest model 10 times
+test.error = 0
+train.error = 0
+test.sensitivity = 0
+test.specificity = 0
+
+for (i in 1:10) {
+  set.seed(i)
+
+  train <- sample(1:nrow(health), nrow(health) / 2 + 0.5)
+  health.train <- health[train, ]
+
+  # Create testing data
+  health.test <- health[-train, ]
+
+
+  # Random Forest Variables
+  STROKE.test <- as.factor(health.train$stroke)
+  X.test <- health[-train, -11]
+  p <- ncol(health)
+  n <- nrow(health)
+  B <- 1000
+
+  # Random Forest Model
+  health.rf <- randomForest(stroke ~ ., data = health, subset = train, xtest = X.test, ytest = STROKE.test, mtry = sqrt(p), ntree = B, importance = TRUE, keep.forest = TRUE)
+
+  # Predict using Random Forest Model
+  health.pred.rf <- predict(health.rf, health.test, type = "class")
+  health.stroke.pred <- ifelse(health.pred.rf < 0.5, "0", "1")
+  (conf.test = table(health.pred.rf, health.test$stroke))
+  
+  rows = nrow(conf.test)
+  if(rows < 2) {
+    test.error[i] = (conf.test[1,2]/sum(conf.test))
+    test.sensitivity[i] = 0
+    test.specificity[i] = conf.test[1,1]/conf.test[1,1]
+  } else if(ncol(conf.test)<1) {
+    test.error[i] = (conf.test[1,2]+conf.test[2,1])/sum(conf.test)
+    test.sensitivity[i] = 0
+    test.specificity[i] = conf.test[1,1]/(conf.test[1,1]+conf.test[2,1])
+  }
+  else {
+    test.error[i] = (conf.test[1,2]+conf.test[2,1])/sum(conf.test)
+    test.sensitivity[i] = conf.test[2,2]/(conf.test[1,2]+conf.test[2,2])
+    test.specificity[i] = conf.test[1,1]/(conf.test[1,1]+conf.test[2,1])
+  }
+}
+
+cat("Test Error: ", mean(test.error))
+cat("Test Sensitivity: ", mean(test.sensitivity))
+cat("Test Specificity: ", mean(test.specificity))
+
+varImpPlot(health.rf)
+health.tree.rf <- tree(stroke ~ ., data = health.train, subset = health.rf$inbag)
+plot(health.tree.rf)
+text(health.tree.rf, pretty = 0)
+```
+
+\newpage
 
 # Conclusion
